--- a/wp-content/themes/archline/css/style.css
+++ b/wp-content/themes/archline/css/style.css
@@ -98,12 +98,20 @@ div.main {
     transform: translate(-50%, -50%);
 }
 
-.main .name {
+.main .name{
     width: 50%;
-    max-width: 860px;
+    max-width: 874px;
     min-width: 240px;
-    display: block;
+
     margin: auto;
+}
+
+.name.image_big {
+    display: block;
+}
+
+.name.image_small {
+    display: none;
 }
 
 .main-links {
@@ -121,9 +129,10 @@ div.main {
 .main-links a,
 .menu-tabs-item a {
     color: #fff;
-    font-size: 40px;
+    font-size: 32px;
     text-decoration: none;
-    letter-spacing: 30px;
+    letter-spacing: 21px;
+    line-height: 70px;
 }
 
 .main-links a:hover,
@@ -174,15 +183,6 @@ nav.menu.open {
 .menu-tabs {
     height: 100%;
     width: 100%;
-}
-.menu-tabs > ul {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-.menu-tabs > ul > li {
-    display: inline-block;
 }
 
 .menu-tabs-item {
@@ -425,9 +425,6 @@ polyline {
     float: left;
     /*float: right;*/
 }
-.header-list.projects li.slash:last-child {
-    display: none;
-}
 
 .header-list li p {
     margin: 0;
@@ -441,6 +438,9 @@ polyline {
     height: 50px;
     background-color: #575757;
     transform: rotate(25deg);
+}
+.header-list li.slash:last-child {
+    display: none;
 }
 
 .header-list a {
@@ -802,14 +802,20 @@ body {
 /*MEDIA*/
 
 @media(max-width: 1366px){
+    .main .name.image_big {
+        display: none;
+    }
+    .main .name.image_small {
+    display: block;
+    }
     .main-links a {
         letter-spacing: 16px;
         padding-left: 8px;
-        font-size: 32px;
+        font-size: 26px;
     }
     .menu-tabs-item a {
         letter-spacing: 10px;
-        font-size: 32px;
+        font-size: 26px;
     }
     .page-name {
         font-size: 25px;
@@ -838,19 +844,11 @@ body {
 }
 @media(max-width: 995px){
     .menu-tabs-item {
-        height: 30%;
+        height: 50%;
     }
 
     header .page-name {
         float: none;
-    }
-
-    /*.wrapper{*/
-        /*padding-left: 50px;*/
-    /*}*/
-    .main .name {
-        margin-top: 50%;
-        padding: 0;
     }
     .main-links {
         transform: none;
@@ -888,9 +886,6 @@ body {
         font-size: 17px;
         letter-spacing: 6px;
         line-height: 30px;
-    }
-    .main .name {
-        margin-top: 75%;
     }
     .page-name {
         font-size: 30px;
